@@ -132,7 +132,6 @@ def GetGeneratePath():
 	assert not is_readonly, "Why do you want the genpath for a readonly store?"
 	try:
 		os.makedirs(win32com.__gen_path__)
-		#os.mkdir(win32com.__gen_path__)
 	except os.error:
 		pass
 	try:
