@@ -10,6 +10,12 @@ Since build 300:
 ----------------
 * Added win32com.shell.SHGetKnownFolderPath() and related constants.
 
+* The directory for generated gen_py files is now under site.getusersitepackages()
+  (although for backwards compatibilty, the previously supported locations
+  remain preferred if they exist.) The post_install script no longer creates a
+  `win32com\gen_py` directory, so this new location will be used by default for
+  all new installs (#1666).
+
 * Shifted work in win32.lib.pywin32_bootstrap to Python's import system from
   manual path manipulations (@wkschwartz in #1651)
 
